--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <title>HTML Video Player</title>
     <link rel="stylesheet" href="style.css">
-    <script src="lib/jquery.js"></script>
 </head>
 <body>
 
-<div class="player">
-    <video class="player__video viewer" src="652333414.mp4"></video>
+    <div class="player">
+        <video class="player__video viewer" src="652333414.mp4"></video>
 
-    <div class="player__controls">
-        <div class="progress">
-            <div class="progress__filled"></div>
+        <div class="player__controls">
+            <div class="progress">
+                <div class="progress__filled"></div>
+            </div>
+            <button class="player__button toggle" title="Toggle Play">►</button>
+            <input type="range" id="volume" name="volume" class="player__slider" min="0" max="1" step="0.05" value="1">
+            <input type="range" id="playbackRate" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
+            <button data-skip="-10" class="player__button">« 10s</button>
+            <button data-skip="25" class="player__button">25s »</button>
         </div>
-        <button class="player__button toggle" title="Toggle Play">►</button>
-        <input type="range" id="volume" name="volume" class="player__slider" min="0" max="1" step="0.05" value="1">
-        <input type="range" id="playbackRate" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
-        <button data-skip="-10" class="player__button">« 10s</button>
-        <button data-skip="25" class="player__button">25s »</button>
     </div>
-</div>
 
-<script src="script.js"></script>
+    <script src="jquery-3.5.1.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
